# LAN-Sharing

./: .gitignore  Alert.Designer.cs  Alert.cs  Alert.resx  App.config  AvatarForm.Designer.cs  AvatarForm.cs  AvatarForm.resx  CMakeLists.txt  Client.cpp  Component1.Designer.cs  Component1.cs  ConcurrentQueue.hpp  ConcurrentStreamPrint.cpp  ConcurrentStreamPrint.cpp.bak  ConcurrentStreamPrint.hpp  Connection.cpp  Connection.cpp.bak  Connection.hpp  Connection.hpp.bak  Constants.cs  Constants.hpp  Constants.hpp.bak  CustomProgressBar.cs  Discovery.cpp  Discovery.cpp.bak  Discovery.h  Discovery.hpp  Discovery.hpp.bak  DiscoveryForm.Designer.cs  DiscoveryForm.cs  DiscoveryForm.resx  DiscoveryFunctions.cpp  DiscoveryMain.cpp  DiscoveryUser.cs  Dll1.sln  Dll1.vcxproj  Dll1.vcxproj.filters  DownloadManager.cpp  DownloadManager.cpp.bak  (+110 more)
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
ServerProject/: BadRequest.h  Buffer.h  ConcurrentQueue.hpp  Connection.cpp  Connection.hpp  Constant.hpp  Constants.hpp  DownloadManager.cpp  DownloadManager.h  DownloadManager.hpp  DownloadManager2.cpp  Exceptions.hpp  FileHandler.cpp  FileHandler.h  FileHandler.hpp  FileOpenException.h  FileWriteException.h  HandleDownload.cpp  HandleDownload.h  LAN-Sharing Server.cpp  LAN-Sharing Server.vcxproj  LAN-Sharing Server.vcxproj.filters  Listen_socket.cpp  Listen_socket.h  Main.cpp  Message.cpp  Message.h  Message.hpp  (+31 more)
src/: CMakeLists.txt  Connection.cpp  Discovery.cpp  DiscoveryMain.cpp  DownloadManager.cpp  FileHandler.cpp  Listen_socket.cpp  Message.cpp  PacketManager.cpp  Protocol.cpp  RequestHandler.cpp  RequestManager.cpp  Server.cpp  SocketBuffer.cpp  UDPService.cpp
(+29 files in other folders)
